--- a/m/me/mer/meraevents.com.html
+++ b/m/me/mer/meraevents.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the meraevents.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606073714id_/http%3A//www.meraevents.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the meraevents.com privacy policy that was archived on 2017-09-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170902174840id_/https%3A//www.meraevents.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
         <meta charset="utf-8">
@@ -19,7 +19,7 @@
             var api_commonRequestProcessRequest = "http://www.meraevents.com/api/common_requests/processRequest";
             var recommendationsEnable="0";
         </script>
-        <script src="https://static.meraevents.com/js/public/jQuery.min.js.gz?v=16"></script>        
+        <script src="https://static.meraevents.com/js/public/jQuery.min.js.gz?v=29"></script>        
                         <title>Privacy Policy</title> 
                 <meta name="viewport" content="width=device-width,initial-scale=1.0">
                 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -43,24 +43,25 @@
 <meta property="og:site_name" content="MeraEvents.com">
 <meta property="fb:admins" content="125923692046">
                 <link rel="shortcut icon" href="https://static.meraevents.com/images/static/favicon.ico">
-<link rel="stylesheet" type="text/css" href="https://static.meraevents.com/css/public/me_custom.min.css.gz?v=16">
+<link rel="stylesheet" type="text/css" href="https://static.meraevents.com/css/public/me_custom.min.css.gz?v=29">
 
-    <link rel="stylesheet" type="text/css" href="https://static.meraevents.com/css/public/print_tickets.min.css.gz?v=16">
+    <link rel="stylesheet" type="text/css" href="https://static.meraevents.com/css/public/print_tickets.min.css.gz?v=29">
                 <script type="text/javascript">
                     var defaultCountryId = '14';
                     var defaultCityName = 'All Cities';
-                    var defaultCityId = '';
+                    var defaultCityId = '0';
                     var defaultSplCityStateId = '0';
-                    var defaultSubCategoryId = '';
-                    var defaultSubCategoryName = '';
+                    var defaultSubCategoryId = '0';
+                    var defaultSubCategoryName = 'All SubCategories';
                     var defaultCountryName = 'India';
                     var label_nomore_events = 'Please move on ';
                     var client_ajax_call_api_key = '930332c8a6bf5f0850bd49c1627ced2092631250';
                     var _paq=[];
+                    var selectedSubcategoryId = '0';
                 </script>
 <!--truesemantic feedback form -->
 
-                    <link rel="stylesheet" href="https://static.meraevents.com/css/public/jquery-ui.min.css.gz?v=16">
+                    <link rel="stylesheet" href="https://static.meraevents.com/css/public/jquery-ui.min.css.gz?v=29">
 
                 
                 <script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
@@ -101,6 +102,27 @@
                                                                        <img src="https://static.meraevents.com/content/country/india_flag.png">
                                                                    </span>
                                                                 <span class="country-code">IND</span>
+                                                            </a></li>
+                                                                                                                <li onclick="setCookieCustom('countryId', '18', '2592000')" value="18">
+                                                            <a href="javascript:void(0);">
+                                                                   <span class="country-flag">
+                                                                       <img src="https://static.meraevents.com/content/country/sin-flag1485212972.png">
+                                                                   </span>
+                                                                <span class="country-code">SGP</span>
+                                                            </a></li>
+                                                                                                                <li onclick="setCookieCustom('countryId', '137', '2592000')" value="137">
+                                                            <a href="javascript:void(0);">
+                                                                   <span class="country-flag">
+                                                                       <img src="https://static.meraevents.com/content/country/malaysia-icon14834386341485213300.png">
+                                                                   </span>
+                                                                <span class="country-code">MYS</span>
+                                                            </a></li>
+                                                                                                                <li onclick="setCookieCustom('countryId', '264', '2592000')" value="264">
+                                                            <a href="javascript:void(0);">
+                                                                   <span class="country-flag">
+                                                                       <img src="https://static.meraevents.com/content/country/usa-flag1499954221.png">
+                                                                   </span>
+                                                                <span class="country-code">USA</span>
                                                             </a></li>
                                                                                                         </ul>
                                                 <a data-toggle="dropdown" type="button" class="btn  btn-lg btn-sm btn-md dropdown-toggle"> 
@@ -236,6 +258,30 @@
 <span class="country-code">IND</span>
 </a>
 </li>
+<li onclick="setCookieCustom('countryId', '18', '2592000')" value="18">
+<a href="javascript:void(0);"> 
+<span class="country-flag">
+<img src="https://static.meraevents.com/content/country/sin-flag1485212972.png">
+</span>
+<span class="country-code">SGP</span>
+</a>
+</li>
+<li onclick="setCookieCustom('countryId', '137', '2592000')" value="137">
+<a href="javascript:void(0);"> 
+<span class="country-flag">
+<img src="https://static.meraevents.com/content/country/malaysia-icon14834386341485213300.png">
+</span>
+<span class="country-code">MYS</span>
+</a>
+</li>
+<li onclick="setCookieCustom('countryId', '264', '2592000')" value="264">
+<a href="javascript:void(0);"> 
+<span class="country-flag">
+<img src="https://static.meraevents.com/content/country/usa-flag1499954221.png">
+</span>
+<span class="country-code">USA</span>
+</a>
+</li>
 </ul> 
 <a class="btn  btn-lg btn-sm btn-md dropdown-toggle" type="button" data-toggle="dropdown">
 <span class="icon-downArrow"></span>
@@ -252,7 +298,7 @@ You are in  <a class="btn collapsed city collapse_bt" href="#headerDD3" aria-exp
 <div class="accTextCont cityList">
 <span class="close_icon"><a href="javascript:void(0)" class="btn"><img src="https://static.meraevents.com/images/static/close-icon.png"></a> </span>
 <h6>top cities</h6>
-<ul ng-init="init([{&quot;id&quot;:&quot;14&quot;,&quot;name&quot;:&quot;Mumbai&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;37&quot;,&quot;name&quot;:&quot;Bengaluru&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;38&quot;,&quot;name&quot;:&quot;Delhi-NCR&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;53&quot;,&quot;aliascityid&quot;:&quot;13073,409,23189,330,331,31472,383,1358,10124,324,350,1214,8982,1138,1224,581,408,32159,32160,32161,32162,32163,32164,32165,45717&quot;},{&quot;id&quot;:&quot;39&quot;,&quot;name&quot;:&quot;Chennai&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;40&quot;,&quot;name&quot;:&quot;Ahmedabad&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;41&quot;,&quot;name&quot;:&quot;Jaipur&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;42&quot;,&quot;name&quot;:&quot;Kolkata&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;47&quot;,&quot;name&quot;:&quot;Hyderabad&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:&quot;139,448,504&quot;},{&quot;id&quot;:&quot;77&quot;,&quot;name&quot;:&quot;Pune&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;1231&quot;,&quot;name&quot;:&quot;Goa&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;11&quot;,&quot;aliascityid&quot;:null}],'city')">
+<ul ng-init="init([{&quot;id&quot;:&quot;14&quot;,&quot;name&quot;:&quot;Mumbai&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;37&quot;,&quot;name&quot;:&quot;Bengaluru&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;38&quot;,&quot;name&quot;:&quot;Delhi-NCR&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;53&quot;,&quot;aliascityid&quot;:&quot;13073,409,23189,330,331,31472,383,1358,10124,324,350,1214,8982,1138,1224,581,408,32159,32160,32161,32162,32163,32164,32165,45717,550&quot;},{&quot;id&quot;:&quot;39&quot;,&quot;name&quot;:&quot;Chennai&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;40&quot;,&quot;name&quot;:&quot;Ahmedabad&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;41&quot;,&quot;name&quot;:&quot;Jaipur&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;42&quot;,&quot;name&quot;:&quot;Kolkata&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;47&quot;,&quot;name&quot;:&quot;Hyderabad&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:&quot;139,448,504&quot;},{&quot;id&quot;:&quot;77&quot;,&quot;name&quot;:&quot;Pune&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;1231&quot;,&quot;name&quot;:&quot;Goa&quot;,&quot;order&quot;:&quot;1&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;11&quot;,&quot;aliascityid&quot;:null},{&quot;id&quot;:&quot;57704&quot;,&quot;name&quot;:&quot;AP&quot;,&quot;order&quot;:&quot;2&quot;,&quot;countryid&quot;:&quot;14&quot;,&quot;splcitystateid&quot;:&quot;0&quot;,&quot;aliascityid&quot;:&quot;122,130,137,141,358,406,425,442,469,561,692,732,737,766,1130,1213,4146,4370,18190,38311,40149,50284&quot;}],'city')">
 <li ng-repeat="city in cityList | orderBy:'name'" id="{{city.id}}_scrollcity"><a title="{{city.name}}" ng-click="setFilter('city',city.id,city.name, 0,city.splcitystateid)"> <label ng-cloak="">{{city.name}}
 <span ng-cloak="">{{city.eventCount}}</span></label></a></li>
 <li><a title="All Cities" ng-click="setFilter('city',0,'All Cities', 0,0)"> <label>All Cities  <span ng-cloak="">{{allCityCount}}</span></label>
@@ -384,8 +430,10 @@ You are in  <a class="btn collapsed city collapse_bt" href="#headerDD3" aria-exp
 				<!--<li><a href="discount.html">Discount</a></li> -->
 				<li><a id="eventFind" href="http://www.meraevents.com/search">Find Event</a></li>
 				<li><a href="http://www.meraevents.com/pricing" target="_blank">Fees &amp; Pricings</a></li>
+                <!--
                 <li><a href="http://www.meraevents.com/apidevelopers" target="_blank">Developers</a></li>
-                <li><a href="http://www.meraevents.com/globalaffiliate/home" target="_blank">Global Affiliate Marketing</a></li>
+				-->
+				<li><a href="http://www.meraevents.com/globalaffiliate/home" target="_blank">Global Affiliate Marketing</a></li>
                 <li><a href="http://www.meraevents.com/features" target="_blank">Organizer Features</a></li>
 			</ul>
 			<ul class="col-md-3 col-sm-4 col-xs-3 col-lg-3">
@@ -509,6 +557,10 @@ You are in  <a class="btn collapsed city collapse_bt" href="#headerDD3" aria-exp
                                                                       </li>
                                                                     <li>
                                         <a id="1231" href="http://www.meraevents.com/goa-events">Goa</a>
+                                                                                 <span class="f-sep">|</span>
+                                                                      </li>
+                                                                    <li>
+                                        <a id="57704" href="http://www.meraevents.com/ap-events">AP</a>
                                                                             </li>
                                 			</ul>
 		</div>
@@ -533,11 +585,11 @@ var api_commonrequestsUpdateCookie = "http://www.meraevents.com/api/common_reque
     })();
    // wizrocket.event.push("user registered", {"Event Name":"'my event'","Event Category":"Professional" });
 </script>
-<script src="https://static.meraevents.com/js/public/combined.min.js.gz?v=16"></script>
-<script src="https://static.meraevents.com/js/public/common.min.js.gz?v=16"></script>
-<script src="https://static.meraevents.com/js/public/jquery.validate.min.js.gz?v=16"></script>
-<script src="https://static.meraevents.com/js/public/static.min.js.gz?v=16"></script>
-<script src="https://static.meraevents.com/js/public/common.min.js.gz?v=16"></script>
+<script src="https://static.meraevents.com/js/public/combined.min.js.gz?v=29"></script>
+<script src="https://static.meraevents.com/js/public/common.min.js.gz?v=29"></script>
+<script src="https://static.meraevents.com/js/public/jquery.validate.min.js.gz?v=29"></script>
+<script src="https://static.meraevents.com/js/public/static.min.js.gz?v=29"></script>
+<script src="https://static.meraevents.com/js/public/common.min.js.gz?v=29"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -570,6 +622,6 @@ $.src='//cdn.zopim.com/?re1Tn1zzg8om9TaoaKDzgaN1esPgyzg7';z.t=+new Date;$.
 type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 </script> 
 <!--End of Zopim Live Chat Script-->
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"d9b9b3fee9","applicationID":"25939837","transactionName":"ZgAEYBQEV0RSVkVdC19KJ1cSDFZZHHZeWhBUCxIbDwtdUks=","queueTime":0,"applicationTime":12,"atts":"SkcHFlweREo=","errorBeacon":"bam.nr-data.net","agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"d9b9b3fee9","applicationID":"25939837","transactionName":"ZgAEYBQEV0RSVkVdC19KJ1cSDFZZHHZeWhBUCxIbDwtdUks=","queueTime":0,"applicationTime":77,"atts":"SkcHFlweREo=","errorBeacon":"bam.nr-data.net","agent":""}</script>
 
 </body></html>
