--- a/z/ze/zer/zerodha.com.html
+++ b/z/ze/zer/zerodha.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zerodha.com privacy policy that was archived on 2017-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170608082307id_/https%3A//zerodha.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zerodha.com privacy policy that was archived on 2017-09-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170902230522id_/https%3A//zerodha.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta charset="utf-8">
@@ -14,16 +14,12 @@
 	<link rel="icon" type="image/png" href="/static/images/favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,400,300|Source+Sans+Pro:400,300,200" rel="stylesheet" type="text/css">
 
- 	<link type="text/css" rel="stylesheet" href="/static/main.css">
+ 	<link type="text/css" rel="stylesheet" href="/static/main.css?v=3.2.2">
 
  	<!-- [head] -->
 </head>
-<body>
-<div class="coin-banner text-center">
-	Stop paying ridiculous commissions; invest in direct mutual funds
-	<span class="coin-link"><a href="https://coin.zerodha.com?utm_source=zerodha&amp;ref=zerodha">Check out Coin</a></span>
-	<span id="close_banner" class="close-banner">×</span>
-</div>
+<body class="coin-banner-active">
+
 <nav id="nav2" class="navbar">
 	<div class="row container nav-responsive">
 		<div class="three columns">
@@ -252,7 +248,7 @@
                             Analysis
                         </div>
                         <div class="row platform-elements">
-                            <div class="six columns menu-link">
+                            <div class="menu-link">
                                 <a href="https://q.zerodha.com/" target="_blank">
                                     <div class="menu-img">
                                         <img src="/static/images/q-grey.svg" class="grey" alt="">
@@ -263,17 +259,18 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="six columns menu-link">
+<!--                             <div class="six columns menu-link">
                                 <a href="https://zerodha.com/expert-advisors/" target="_blank">
                                     <div class="menu-img">
-                                        <img src="/static/images/ea-grey.svg" class="grey" alt="">
-                                        <img src="/static/images/ea.svg" class="coloured" alt="">
+                                        <img src="/static/images/ea-grey.svg" class="grey" alt="" />
+                                        <img src="/static/images/ea.svg" class="coloured" alt="" />
                                     </div>
                                     <div class="menu-text">
                                         Expert advisors
                                     </div>
                                 </a>
                             </div>
+ -->                            
                             <!--<div class="four columns menu-link">
 							<a href="http://quant.zerodha.com/" target="_blank">
 								<div class="menu-img">
@@ -362,6 +359,9 @@
                                 </li>
                                 <li>
                                     <a href="/tools/black-scholes">Black–Scholes calculator</a>
+                                </li>
+                                <li>
+                                    <a href="https://zerodha.com/expert-advisors/">Expert advisors</a>
                                 </li>
                             </ul>
                         </div>
@@ -532,7 +532,12 @@
 
 	<!-- [footer] -->
 
-
+<!-- <div class="coin-banner text-center">
+	Update 2 on 17th Aug: Call and trade is back online. Phone support is still being restored.
+	<span class="coin-link"><a href="https://zerodha.com/marketintel/Bulletin/434">More info</a></span>
+	<span id="close_banner" class="close-banner">×</span>
+</div>
+ -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
