--- a/c/cr/cre/createspace.com.html
+++ b/c/cr/cre/createspace.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the createspace.com privacy policy that was archived on 2017-04-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170403220221id_/https%3A//www.createspace.com/Help/Rights/Privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the createspace.com privacy policy that was archived on 2017-09-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170902231606id_/https%3A//www.createspace.com/Help/Rights/Privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
 
-<script src="https://ssl.images-createspace.com/csp/v1285337100/Common/js/urchin/urchin.js" type="text/javascript"></script>
+<script src="https://ssl.images-createspace.com/csp/v526602784/Common/js/urchin/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
 /* <![CDATA[ */ 
 urchinTracker();
@@ -20,12 +20,12 @@ urchinTracker();
 
 
 
-<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v1285337100/Special/Css/sitewide-min.css"><!--[if IE]>
-<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v1285337100/Special/Css/sitewideIE-min.css" /><![endif]-->
+<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v526602784/Special/Css/sitewide-min.css"><!--[if IE]>
+<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v526602784/Special/Css/sitewideIE-min.css" /><![endif]-->
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v1285337100/Special/Css/sitewideIE7-min.css" /><script defer src="https://ssl.images-createspace.com/csp/v1285337100/Common/js/ie/ie_disable.js" type="text/javascript"></script><![endif]-->
+<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v526602784/Special/Css/sitewideIE7-min.css" /><script defer src="https://ssl.images-createspace.com/csp/v526602784/Common/js/ie/ie_disable.js" type="text/javascript"></script><![endif]-->
 <!--[if lte IE 6]>
-<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v1285337100/Special/Css/sitewideIE6-min.css" /><![endif]-->
+<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v526602784/Special/Css/sitewideIE6-min.css" /><![endif]-->
 
 
 <link rel="shortcut icon" href="https://ssl.images-createspace.com/csp/Common/Icon.ico">
@@ -169,9 +169,9 @@ submenusPopulated = false;
       <div class="subMenu"><ul id="account_subMenuItems"></ul></div>
    </div>
 
-<script type="text/javascript" src="https://ssl.images-createspace.com/csp/v1285337100/Common/js/all-min.js"></script>
+<script type="text/javascript" src="https://ssl.images-createspace.com/csp/v526602784/Common/js/all-min.js"></script>
 
-   <script type="text/javascript" src="/Special/Js/menu_config.js.jsp?version=1285337100"></script>
+   <script type="text/javascript" src="/Special/Js/menu_config.js.jsp?version=526602784"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
    populateSubmenus(menuitems);
@@ -186,8 +186,8 @@ submenusPopulated = false;
 
 </div>
 
-<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v1285337100/Common/css/window.css">
-<script type="text/javascript" src="https://ssl.images-createspace.com/csp/v1285337100/Common/js/window.js"></script>
+<link rel="stylesheet" type="text/css" href="https://ssl.images-createspace.com/csp/v526602784/Common/css/window.css">
+<script type="text/javascript" src="https://ssl.images-createspace.com/csp/v526602784/Common/js/window.js"></script>
 
 
 <!--[if IE]>
@@ -323,7 +323,7 @@ transactions, customer information generally is one of the transferred business 
 (unless, of course, the customer consents otherwise). Also, in the unlikely event that CreateSpace or substantially all of its assets are acquired, customer 
 information will of course be one of the transferred assets.</li> 
    <li><strong>Protection of CreateSpace and Others:</strong><br> We release account and other personal information when we believe release is appropriate to 
-comply with the law; enforce or apply our <a href="https://www.createspace.com/Help/Rights/TermsOfUse.jsp">Terms of Use</a> and other agreements; or protect the rights, property, or safety of CreateSpace, our users, or others. 
+comply with the law; enforce or apply our <a href="https://www.createspace.com/Help/Rights/TermsOfUse.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Terms of Use</a> and other agreements; or protect the rights, property, or safety of CreateSpace, our users, or others. 
 This includes exchanging information with other companies and organizations for fraud protection and credit risk reduction. Obviously, however, this does not 
 include selling, renting, sharing, or otherwise disclosing personally identifiable information from customers for commercial purposes in violation of the commitments 
 set forth in this Privacy Notice.</li> 
@@ -357,7 +357,7 @@ advertisers (including ad-serving companies) may assume that users who interact 
 <a name="Access"></a>
 <h2>Which Information Can I Access?</h2>
 <p>CreateSpace gives you access to a broad range of information about your account and your interactions with CreateSpace for the limited purpose of viewing and, in certain 
-cases, updating that information. To access account information, visit <a href="https://www.createspace.com/Member/Dashboard.do">My Account</a>.</p>
+cases, updating that information. To access account information, visit <a href="https://www.createspace.com/Member/Dashboard.do;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">My Account</a>.</p>
 
 <a name="Choices"></a>
 <h2>What Choices Do I Have?</h2>
@@ -380,7 +380,7 @@ leave them turned on.</li>
 <h2>Conditions of Use, Notices, and Revisions</h2>
 <p>If you choose to visit CreateSpace, your visit and any dispute over privacy is subject to this Notice and our Conditions of Use, including limitations on damages, disputes, 
 and application of the law of the state of Washington. If you have any concern about privacy at CreateSpace, please contact us with a thorough description, and we will try to 
-resolve it. Our business changes constantly, and our Privacy Notice and the <a href="https://www.createspace.com/Help/Rights/TermsOfUse.jsp">Terms of Use</a> will change also. We may e-mail periodic reminders of our notices and conditions,
+resolve it. Our business changes constantly, and our Privacy Notice and the <a href="https://www.createspace.com/Help/Rights/TermsOfUse.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Terms of Use</a> will change also. We may e-mail periodic reminders of our notices and conditions,
  unless you have instructed us not to, but you should check our Web site frequently to see recent changes. Unless stated otherwise, our current Privacy Notice applies to all 
 information that we have about you and your account. We stand behind the promises we make, however, and will never materially change our policies and practices to make them less 
 protective of customer information collected in the past without the consent of affected customers. </p>
@@ -423,21 +423,21 @@ and other payment information.</p>
 
   <div id="footer">
    <ul>
-      <li class="footer"><a href="https://www.createspace.com/AboutUs.jsp">About Us</a></li>
-      <li class="footer"><a href="https://www.createspace.com/Member/Support.do">Contact Us</a></li>
+      <li class="footer"><a href="https://www.createspace.com/AboutUs.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">About Us</a></li>
+      <li class="footer"><a href="https://www.createspace.com/Member/Support.do;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Contact Us</a></li>
       <li class="footer"><a href="http://www.twitter.com/CreateSpace" target="_blank">Twitter</a></li>
       <li class="footer"><a href="http://www.facebook.com/CreateSpace" target="_blank">Facebook</a></li>
-      <li class="footer"><a href="https://www.createspace.com/PressRoom.jsp" class="last">Press Room</a></li>
+      <li class="footer"><a href="https://www.createspace.com/PressRoom.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46" class="last">Press Room</a></li>
    </ul>
    <div class="clearer"></div>
    <ul style="font-size:10px;margin-top:-10px;">
-      <li style="border-right:1px solid #ccc;padding-right:15px;"><a href="https://www.createspace.com/Help/Rights/TermsOfUse.jsp">Terms of Use</a></li>
+      <li style="border-right:1px solid #ccc;padding-right:15px;"><a href="https://www.createspace.com/Help/Rights/TermsOfUse.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Terms of Use</a></li>
       
-      <li style="border-right:1px solid #ccc;padding-right:15px;margin-left:15px;"><a href="https://www.createspace.com/Help/Rights/MemberAgreement.jsp">Member Agreement</a></li>
+      <li style="border-right:1px solid #ccc;padding-right:15px;margin-left:15px;"><a href="https://www.createspace.com/Help/Rights/MemberAgreement.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Member Agreement</a></li>
       
-      <li style="border-right:1px solid #ccc;padding-right:15px;margin-left:15px;"><a href="https://www.createspace.com/Help/Rights/Privacy.jsp">Privacy</a></li>
-      <li style="border-right:1px solid #ccc;padding-right:15px;margin-left:15px;"><a href="https://www.createspace.com/Sitemap.jsp">Sitemap</a></li>
-      <li style="margin-left:15px;"><a href="https://www.createspace.com/Careers.jsp">Careers</a></li>
+      <li style="border-right:1px solid #ccc;padding-right:15px;margin-left:15px;"><a href="https://www.createspace.com/Help/Rights/Privacy.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Privacy</a></li>
+      <li style="border-right:1px solid #ccc;padding-right:15px;margin-left:15px;"><a href="https://www.createspace.com/Sitemap.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Sitemap</a></li>
+      <li style="margin-left:15px;"><a href="https://www.createspace.com/Careers.jsp;jsessionid=C3928C37D05C7698675D26CA2572F10B.9ff317a4ad5bb4b1512e999ba37a5f46">Careers</a></li>
       <li style="margin-left:15px;"><div>Copyright © 2000 - 2017, CreateSpace, a DBA of On-Demand Publishing, LLC.</div></li>
    </ul>
   </div>
