--- a/s/sk/sky/skyscape.com.html
+++ b/s/sk/sky/skyscape.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the skyscape.com privacy policy that was archived on 2018-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180816202143id_/http%3A//www.skyscape.com/index/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the skyscape.com privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415233513id_/https%3A//www.skyscape.com/index/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class="csstransforms csstransforms3d csstransitions"><head>
     <!--- TODO:  Insert Title Below -->
@@ -8,8 +8,8 @@
     <meta name="description" content="Skyscape: Simple Page">
     <!--- TODO: Add Description --->
     <meta name="keywords" content="Physicians, Physician, Physician pda, Physician software, Physician palm, Physician medical download, Physician medical software, Physician surgery software, Physician healthcare software, Physician tablet pc, Physician pocket pc, palm medical downloads, pda medical download, medical handheld downloads">
-</head>
-<body>
+<style></style></head>
+<body><div role="dialog" aria-live="polite" aria-label="cookieconsent" aria-describedby="cookieconsent:desc" class="cc-window cc-banner cc-type-info cc-theme-classic cc-top cc-color-override--1455636119 " style=""><!--googleoff: all--><span id="cookieconsent:desc" class="cc-message">Skyscape website employs technology such as cookies to improve user experience. By continuing to use this website you agree to our use of cookies and <a href="/index/privacy.aspx">Privacy Policy.</a></span><div class="cc-compliance"><a aria-label="dismiss cookie message" role="button" tabindex="0" class="cc-btn cc-dismiss">Ok</a></div><!--googleon: all--></div>
     
    <!-- <meta name="Robots" content="NOINDEX">-->
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE11">
@@ -320,7 +320,32 @@
     
     <div class="header-shim">
     </div>
+   <link rel="stylesheet" type="text/css" href="/css/cookieconsent.min.css">
+<script src="/js/cookieconsent.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    window.addEventListener("load", function () {
+        window.cookieconsent.initialise({
 
+            "palette": {
+                "popup": {
+                    "background": "#474747",
+                    "text": "#ffffff"
+                },
+                "button": {
+                    "background": "#d71341",
+                    "text": "#ffffff"
+                }
+            },
+            "showLink": false,
+            "theme": "classic",
+            "position": "top",
+            "content": {
+                "message": "Skyscape website employs technology such as cookies to improve user experience. By continuing to use this website you agree to our use of cookies and <a href='/index/privacy.aspx'>Privacy Policy.</a>",
+                "dismiss": "Ok"
+            }
+        })
+    });
+</script>
     <section id="section-title" class="">
 		<div class="section-inner">
 			<div class="wrapper" style="padding-right: 10px;">
@@ -625,7 +650,7 @@
 </section>
     <br>
     <div id="copyText" class="text">
-        Copyright © 2018. All rights reserved. Skyscape<sup>®</sup> is the registered
+        Copyright © 2019. All rights reserved. Skyscape<sup>®</sup> is the registered
         trademark of Skyscape Medpresso, Inc.<br>
         All other trademarks, service marks and registrations are the intellectual properties
         of their respective owners.
