--- a/d/dp/dpc/dpchallenge.com.html
+++ b/d/dp/dpc/dpchallenge.com.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the dpchallenge.com privacy policy that was archived on 2017-07-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170709093903id_/http%3A//www.dpchallenge.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dpchallenge.com privacy policy that was archived on 2019-04-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190419050120id_/https%3A//www.dpchallenge.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 	<title>DPChallenge - A Digital Photography Contest</title>
 	<link rel="styleSheet" type="text/css" href="/include/styles.css">
 	<meta name="keywords" content="photography contest, digital photography, digital cameras, contest, digital photos, photo contest, digital imaging, challenge, cameras, photography tutorials, photography forums, photography discussion, langdon oliver, andrew ungvarsky">
 	<meta name="description" content="Weekly digital photography contest site, featuring active forums, tutorials, photographer profiles, and more.  Enter and/or vote -- fun learning for ALL skill levels.">
+	<!--<meta charset="utf-8">-->
 	<script type="text/javascript" src="/include/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="/include/main.js"></script>
 </head>
@@ -79,9 +80,9 @@ If  you have any questions regarding this Privacy Statement, the practices of DP
 			<a href="/terms.php" class="u">Terms of Use</a> -
 			<a href="/privacy.php" class="u">Privacy</a> -
 			<a href="#" class="u">Top ^</a>
-		<br>DPChallenge, and website content and design, Copyright © 2001-2017 Challenging Technologies, LLC.
+		<br>DPChallenge, and website content and design, Copyright © 2001-2019 Challenging Technologies, LLC.
 		<br>All digital photo copyrights belong to the photographers and may not be used without permission.
-		<br>Proudly hosted by <a href="http://www.sargasso.net/from/dpc" target="_blank" class="u" style="color:#666666">Sargasso Networks</a>. Current Server Time: 07/09/2017 05:39:04 AM EDT.
+		<br>Proudly hosted by <a href="http://www.sargasso.net/from/dpc" target="_blank" class="u" style="color:#666666">Sargasso Networks</a>. Current Server Time: 04/19/2019 01:01:20 AM EDT.
 		</div>
 
 		</td></tr></tbody></table>
